# apps/server/src/etapi/revisions.ts
@@ -21,10 +21,10 @@ function register(router: Router) {
             recentChanges = sql.getRows<RecentChangeRow>(`
                 SELECT
                     notes.noteId,
-                    notes.isDeleted AS current_isDeleted,
-                    notes.deleteId AS current_deleteId,
-                    notes.title AS current_title,
-                    notes.isProtected AS current_isProtected,
+                    notes.isDeleted AS currentIsDeleted,
+                    notes.deleteId AS currentDeleteId,
+                    notes.title AS currentTitle,
+                    notes.isProtected AS currentIsProtected,
                     revisions.title,
                     revisions.utcDateCreated AS utcDate,
                     revisions.dateCreated AS date
@@ -33,10 +33,10 @@ function register(router: Router) {
                 UNION ALL
                 SELECT
                     notes.noteId,
-                    notes.isDeleted AS current_isDeleted,
-                    notes.deleteId AS current_deleteId,
-                    notes.title AS current_title,
-                    notes.isProtected AS current_isProtected,
+                    notes.isDeleted AS currentIsDeleted,
+                    notes.deleteId AS currentDeleteId,
+                    notes.title AS currentTitle,
+                    notes.isProtected AS currentIsProtected,
                     notes.title,
                     notes.utcDateCreated AS utcDate,
                     notes.dateCreated AS date
@@ -44,10 +44,10 @@ function register(router: Router) {
                 UNION ALL
                 SELECT
                     notes.noteId,
-                    notes.isDeleted AS current_isDeleted,
-                    notes.deleteId AS current_deleteId,
-                    notes.title AS current_title,
-                    notes.isProtected AS current_isProtected,
+                    notes.isDeleted AS currentIsDeleted,
+                    notes.deleteId AS currentDeleteId,
+                    notes.title AS currentTitle,
+                    notes.isProtected AS currentIsProtected,
                     notes.title,
                     notes.utcDateModified AS utcDate,
                     notes.dateModified AS date
@@ -68,10 +68,10 @@ function register(router: Router) {
                 )
                 SELECT
                     notes.noteId,
-                    notes.isDeleted AS current_isDeleted,
-                    notes.deleteId AS current_deleteId,
-                    notes.title AS current_title,
-                    notes.isProtected AS current_isProtected,
+                    notes.isDeleted AS currentIsDeleted,
+                    notes.deleteId AS currentDeleteId,
+                    notes.title AS currentTitle,
+                    notes.isProtected AS currentIsProtected,
                     revisions.title,
                     revisions.utcDateCreated AS utcDate,
                     revisions.dateCreated AS date
@@ -81,10 +81,10 @@ function register(router: Router) {
                 UNION ALL
                 SELECT
                     notes.noteId,
-                    notes.isDeleted AS current_isDeleted,
-                    notes.deleteId AS current_deleteId,
-                    notes.title AS current_title,
-                    notes.isProtected AS current_isProtected,
+                    notes.isDeleted AS currentIsDeleted,
+                    notes.deleteId AS currentDeleteId,
+                    notes.title AS currentTitle,
+                    notes.isProtected AS currentIsProtected,
                     notes.title,
                     notes.utcDateCreated AS utcDate,
                     notes.dateCreated AS date
@@ -93,10 +93,10 @@ function register(router: Router) {
                 UNION ALL
                 SELECT
                     notes.noteId,
-                    notes.isDeleted AS current_isDeleted,
-                    notes.deleteId AS current_deleteId,
-                    notes.title AS current_title,
-                    notes.isProtected AS current_isProtected,
+                    notes.isDeleted AS currentIsDeleted,
+                    notes.deleteId AS currentDeleteId,
+                    notes.title AS currentTitle,
+                    notes.isProtected AS currentIsProtected,
                     notes.title,
                     notes.utcDateModified AS utcDate,
                     notes.dateModified AS date
@@ -107,17 +107,17 @@ function register(router: Router) {
         }
 
         for (const change of recentChanges) {
-            if (change.current_isProtected) {
+            if (change.currentIsProtected) {
                 if (protectedSessionService.isProtectedSessionAvailable()) {
                     change.title = protectedSessionService.decryptString(change.title) || "[protected]";
-                    change.current_title = protectedSessionService.decryptString(change.current_title) || "[protected]";
+                    change.currentTitle = protectedSessionService.decryptString(change.currentTitle) || "[protected]";
                 } else {
-                    change.title = change.current_title = "[protected]";
+                    change.title = change.currentTitle = "[protected]";
                 }
             }
 
-            if (change.current_isDeleted) {
-                const deleteId = change.current_deleteId;
+            if (change.currentIsDeleted) {
+                const deleteId = change.currentDeleteId;
 
                 const undeletedParentBranchIds = noteService.getUndeletedParentBranchIds(change.noteId, deleteId);
 
